--- a/vue-udemy/module17/module17/.babelrc
+++ b/vue-udemy/module17/module17/.babelrc
@@ -1,7 +1,15 @@
 {
   "presets": [
-    ["latest", {
-      "es2015": { "modules": false }
-    }]
+    [
+      "latest",
+      {
+        "es2015": {
+          "modules": false
+        }
+      }
+    ],
+    [
+      "stage-2"
+    ]
   ]
 }
